<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/regi8"
        android:layout_width="271dp"
        android:layout_height="56dp"
        android:layout_gravity="start"
        android:layout_marginStart="70dp"
        android:layout_marginTop="553dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="122dp"
        android:background="@drawable/rounded_button"
        android:enabled="true"
        android:fontFamily="@font/poppins_light"
        android:onClick="opensearch"
        android:text="@string/searchmain"
        android:textColor="#252525"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/regi14"
        android:layout_width="154dp"
        android:layout_height="46dp"
        android:layout_gravity="start"
        android:layout_marginStart="128dp"
        android:layout_marginTop="642dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="43dp"
        android:background="@drawable/rounded_button2"
        android:enabled="true"
        android:fontFamily="@font/poppins_light"
        android:onClick="logout"
        android:text="@string/logout"
        android:textColor="#252525"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView61"
        android:layout_width="130dp"
        android:layout_height="123dp"
        android:layout_marginStart="222dp"
        android:layout_marginTop="146dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="463dp"
        android:contentDescription="@string/addauction"
        android:onClick="opencart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cart" />

    <TextView
        android:id="@+id/textView102"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="223dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="418dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:onClick="opencart"
        android:text="@string/cartitem"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView103"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="465dp"
        android:layout_marginEnd="228dp"
        android:layout_marginBottom="221dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:onClick="openpaint"
        android:text="@string/paint"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView62"
        android:layout_width="130dp"
        android:layout_height="123dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="342dp"
        android:layout_marginEnd="227dp"
        android:layout_marginBottom="266dp"
        android:contentDescription="@string/addauction"
        android:onClick="openpaint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/paint" />

    <ImageView
        android:id="@+id/imageView43"
        android:layout_width="130dp"
        android:layout_height="123dp"
        android:layout_marginStart="222dp"
        android:layout_marginTop="342dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="266dp"
        android:contentDescription="@string/addshow"
        android:onClick="shows"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shows" />

    <TextView
        android:id="@+id/textView71"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="222dp"
        android:layout_marginTop="465dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="221dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:onClick="shows"
        android:text="@string/showshome"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView42"
        android:layout_width="130dp"
        android:layout_height="123dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="228dp"
        android:layout_marginBottom="463dp"
        android:contentDescription="@string/addauction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/portrait" />

    <TextView
        android:id="@+id/textView70"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="227dp"
        android:layout_marginBottom="418dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:text="@string/user"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="145dp"
        android:layout_height="67dp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="631dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/l" />

    <TextView
        android:id="@+id/hiddentxt"
        android:layout_width="59dp"
        android:layout_height="42dp"
        android:layout_marginStart="325dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="673dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/ad"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>