<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bid">

    <Button
        android:id="@+id/regi13"
        android:layout_width="156dp"
        android:layout_height="47dp"
        android:layout_gravity="start"
        android:layout_marginStart="127dp"
        android:layout_marginTop="658dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="26dp"
        android:background="@drawable/rounded_button"
        android:enabled="true"
        android:fontFamily="@font/poppins_light"
        android:text="@string/bid"
        android:textColor="#252525"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView91"
        android:layout_width="150dp"
        android:layout_height="37dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/time"
        android:textColor="#363636"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cardView13"
        app:layout_constraintEnd_toEndOf="@+id/cardView13"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="@+id/cardView13"
        app:layout_constraintTop_toTopOf="@+id/cardView13"
        app:layout_constraintVertical_bias="0.685" />

    <TextView
        android:id="@+id/textView96"
        android:layout_width="151dp"
        android:layout_height="33dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/enterprice"
        android:textColor="#363636"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cardView13"
        app:layout_constraintEnd_toEndOf="@+id/cardView13"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="@+id/cardView13"
        app:layout_constraintTop_toTopOf="@+id/cardView13"
        app:layout_constraintVertical_bias="0.907" />

    <TextView
        android:id="@+id/textView92"
        android:layout_width="98dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/count"
        android:textColor="#131313"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cardView13"
        app:layout_constraintEnd_toEndOf="@+id/cardView13"
        app:layout_constraintHorizontal_bias="0.706"
        app:layout_constraintStart_toStartOf="@+id/cardView13"
        app:layout_constraintTop_toBottomOf="@+id/cardView12"
        app:layout_constraintVertical_bias="0.752" />

    <TextView
        android:id="@+id/textView77"
        android:layout_width="315dp"
        android:layout_height="75dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/itemdes1"
        android:textColor="#1B1B1B"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView13"
        app:layout_constraintEnd_toEndOf="@+id/cardView13"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toStartOf="@+id/cardView13"
        app:layout_constraintTop_toTopOf="@+id/cardView13"
        app:layout_constraintVertical_bias="0.314" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView13"
        android:layout_width="330dp"
        android:layout_height="215dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="419dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="97dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="-1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView86"
        android:layout_width="345dp"
        android:layout_height="63dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="581dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:text="@string/itemname"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197" />

    <TextView
        android:id="@+id/textView87"
        android:layout_width="177dp"
        android:layout_height="41dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/cartitem2"
        android:textColor="#202020"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cardView12"
        app:layout_constraintEnd_toEndOf="@+id/cardView12"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="@+id/cardView12"
        app:layout_constraintTop_toTopOf="@+id/cardView12"
        app:layout_constraintVertical_bias="0.938" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView12"
        android:layout_width="332dp"
        android:layout_height="285dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="323dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="-1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="match_parent"
            android:layout_height="218dp"
            app:srcCompat="@drawable/itemdet" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView88"
        android:layout_width="178dp"
        android:layout_height="34dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/descrip"
        android:textColor="#1D1D1D"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cardView13"
        app:layout_constraintEnd_toEndOf="@+id/cardView13"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="@+id/cardView13"
        app:layout_constraintTop_toTopOf="@+id/cardView13"
        app:layout_constraintVertical_bias="0.054" />

    <TextView
        android:id="@+id/textView89"
        android:layout_width="104dp"
        android:layout_height="38dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="228dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/lstprice"
        android:textColor="#202020"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/cardView12"
        app:layout_constraintTop_toTopOf="@+id/cardView12" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="131dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/cardView13"
        app:layout_constraintEnd_toEndOf="@+id/cardView13"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintStart_toStartOf="@+id/cardView13"
        app:layout_constraintTop_toTopOf="@+id/cardView13"
        app:layout_constraintVertical_bias="0.948" />

</androidx.constraintlayout.widget.ConstraintLayout>